# wordle-strats

./: Cargo.toml  README.md  adjusted-possible-2025-02-10.txt  find-duplicates.sh  new-allowed.txt  new-maybe-possible-2025-01-20.txt  new-maybe-possible-2025-02-10.txt
.cargo/: config.toml
src/: bench.rs  comb.rs  main.rs  utils.rs  words.rs
