[package]
name = "wt"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[profile.release]
#debug = true
lto = "fat"

[dev-dependencies]
criterion = "0.5.1"
getrandom = "0.3.1"
rand = "0.9.0"

[[bench]]
name = "benchmark"
path = "src/bench.rs"
harness = false

[dependencies]
rayon = "1.10.0"

[dependencies.ordes]
version = "0.4.1"
features = ["const_generics"]
